<resources>
    <string name="app_name">CansaCare Doctor</string>
    <string name="be_part_of_someone_s_story">Be part of someone\'s story</string>
    <string name="getstarted_paragraph">Appointments reminders, online bookings, easy payments and serving a greater cause with your service</string>
    <string name="create_account"> Create Account</string>
    <string name="sign_in"> Sign in</string>
    <string name="back_button">back_button</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="not_user_yet">Don\'t have an acount ? </string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account ? </string>
    <string name="appointments">Appointments</string>
    <string name="patients">Patients</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_appointments">My appointments</string>
    <string name="search">search</string>
    <string name="my_patients">My Patients</string>
    <string name="patient_name">Georges M Ch S DIEME</string>
    <string name="type_of_cancer">Prostate cancer</string>
    <string name="appointment_type">March 3,2023</string>
    <string name="appointment_time">1:30pm - 2:30pm</string>
    <string name="profile_title">Oncologist</string>
    <string name="profile_picture">profile picture</string>
    <string name="my_account">My account</string>
    <string name="my_settings">My settings</string>
    <string name="current_earnings">Current earnings</string>
    <string name="earnings_sample">GHC 520.00</string>
    <string name="withdraw_earnings">Withdraw earnings</string>
    <string name="mobile_number">Mobile number</string>
    <string name="mobile_number_sample">+2230554344771</string>
    <string name="location">Location</string>
    <string name="location_sample">20, Aluguntugui street Accra</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="dob_sample">13/06/1987</string>
    <string name="services_offering">Services offering</string>
    <string name="service_offering_sample">Consulting</string>
    <string name="edit_profile">Edit profile</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="privacy_policies">Privacy policies</string>
    <string name="about_cansacare">About CansaCare</string>
    <string name="faqs">FAQs</string>
    <string name="reset_password">Reset password</string>
    <string name="logout">Logout</string>
    <string name="cansacare_logo">CansaCare Logo</string>
    <string name="splash_screen_illustration">Splash screen illustration</string>
    <string name="completed">Completed</string>
    <string name="data_sample">January 3,2023</string>
    <string name="my_earnings">My earnings</string>
    <string name="this_week">This week</string>
    <string name="you_have_completed_0_bookings">You have completed 0 bookings</string>
    <string name="date_range">6th Mar - 12th Mar</string>
    <string name="total_earnings">Total earnings :</string>
    <string name="history">History</string>
    <string name="earning_prompt">earning</string>
    <string name="charge_prompt">charge</string>
    <string name="session_booked">Session booked!</string>
    <string name="notifications">notifications</string>
    <string name="join_call">Join call</string>
    <string name="appointment_details">Appointment details :</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="patient_details">Patient details</string>
    <string name="age">Age :</string>
    <string name="status">Status :</string>
    <string name="mode">Mode :</string>
    <string name="online_call">Online call</string>
    <string name="sample_age">31</string>
    <string name="diagnosed">Diagnosed</string>
    <string name="reason">Reason :</string>
    <string name="cancel_appointment">Cancel appointment</string>
    <string name="continue_with_google">Continue with Google</string>
</resources>