<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppointmentOpened">

    <androidx.cardview.widget.CardView
        android:id="@+id/appointment_opened_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardBackgroundColor="@color/primary_color"
        app:contentPadding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/appointment_opened_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back_button"
                android:src="@drawable/back_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appointment_opened_patient_name"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/patient_name"
                android:textColor="@color/white"
                android:textSize="@dimen/H1"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_of_cancer"
                android:textColor="@color/gray_color"
                android:textSize="@dimen/H2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointment_opened_patient_name" />

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/session_booked_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/appointment_booked"
        app:contentPadding="10dp"
        app:layout_constraintTop_toBottomOf="@id/appointment_opened_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/session_booked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/session_booked"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/notifications"
                android:src="@drawable/notifications_ic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/session_booked"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/appointment_opened_button_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_bg_transparent"
        android:drawableStart="@drawable/call_ic"
        android:hint="@string/join_call"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="@dimen/H2"
        app:layout_constraintTop_toBottomOf="@id/session_booked_card" />

    <TextView
        android:id="@+id/appointment_opened_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/appointment_details"
        android:textColor="@color/black"
        android:textSize="@dimen/H2"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointment_opened_button_call" />

    <TextView
        android:id="@+id/appointment_opened_title_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="@dimen/H2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointment_opened_details_title" />

    <TextView
        android:id="@+id/appointment_opened_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/appointment_type"
        android:textColor="@color/black"
        android:textSize="@dimen/H2"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/appointment_opened_title_date"
        app:layout_constraintTop_toBottomOf="@+id/appointment_opened_details_title" />


    <TextView
        android:id="@+id/appointment_opened_title_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="@dimen/H2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointment_opened_title_date" />

    <TextView
        android:id="@+id/appointment_opened_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/appointment_time"
        android:textColor="@color/black"
        android:textSize="@dimen/H2"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/appointment_opened_title_time"
        app:layout_constraintTop_toBottomOf="@+id/appointment_opened_date" />

    <TextView
        android:id="@+id/appointment_opened_title_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/mode"
        android:textColor="@color/black"
        android:textSize="@dimen/H2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointment_opened_time" />

    <TextView
        android:id="@+id/appointment_opened_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/online_call"
        android:textColor="@color/black"
        android:textSize="@dimen/H2"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/appointment_opened_title_time"
        app:layout_constraintTop_toBottomOf="@+id/appointment_opened_time" />

    <View
        android:id="@+id/appointment_opened_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/appointment_opened_mode" />

    <TextView
        android:id="@+id/appointment_opened_patient_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/patient_details"
        android:textColor="@color/black"
        android:textSize="@dimen/H2"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointment_opened_divider" />

    <TextView
        android:id="@+id/appointment_opened_patient_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/age"
        android:textColor="@color/black"
        android:textSize="@dimen/H2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointment_opened_patient_detail_title" />

    <TextView
        android:id="@+id/appointment_opened_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/sample_age"
        android:textColor="@color/black"
        android:textSize="@dimen/H2"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/appointment_opened_patient_age"
        app:layout_constraintTop_toBottomOf="@+id/appointment_opened_patient_detail_title" />

    <TextView
        android:id="@+id/appointment_opened_patient_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="@dimen/H2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointment_opened_patient_age" />

    <TextView
        android:id="@+id/appointment_opened_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/diagnosed"
        android:textColor="@color/black"
        android:textSize="@dimen/H2"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/appointment_opened_patient_status"
        app:layout_constraintTop_toBottomOf="@+id/appointment_opened_age" />

    <Button
        android:id="@+id/appointment_opened_button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_bg_red"
        android:hint="@string/cancel_appointment"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/earnings_charge_red"
        android:textSize="@dimen/H2"
        app:layout_constraintTop_toBottomOf="@id/appointment_opened_status" />


</androidx.constraintlayout.widget.ConstraintLayout>