<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context=".Login">


    <TextView
        android:id="@+id/login_header_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="@dimen/H1"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_back_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/back_ic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_hint_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/login_username"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:autofillHints="username"
        android:background="@drawable/edit_text_field"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/login_back_ic" />


    <TextView
        android:id="@+id/login_hint_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_field"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/login_username" />

    <Button
        android:id="@+id/login_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_bg_primary_color"
        android:hint="@string/sign_in"
        android:textColorHint="@color/white"
        android:textSize="@dimen/H2"
        app:layout_constraintTop_toBottomOf="@id/login_password" />

    <TextView
        android:id="@+id/login_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_sign_in" />


    <Button
        android:id="@+id/login_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/button_bg_transparent"
        android:drawableStart="@drawable/google_ic"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/continue_with_google"
        app:layout_constraintTop_toBottomOf="@id/login_divider" />

    <TextView
        android:id="@+id/login_not_user_yet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="16dp"
        android:text="@string/not_user_yet"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/login_not_user_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/create_account"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/login_not_user_yet" />


</androidx.constraintlayout.widget.ConstraintLayout>