<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/signup_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="@dimen/H1"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/signup_back_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/back_ic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_hint_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        app:layout_constraintBottom_toTopOf="@+id/signup_first_name"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/signup_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:autofillHints="Firstname"
        android:background="@drawable/edit_text_field"
        android:hint="@string/first_name"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/signup_header" />

    <TextView
        android:id="@+id/signup_hint_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        app:layout_constraintBottom_toTopOf="@+id/signup_last_name"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/signup_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="last name"
        android:background="@drawable/edit_text_field"
        android:hint="@string/last_name"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/signup_first_name" />

    <TextView
        android:id="@+id/signup_hint_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/signup_email"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="last name"
        android:background="@drawable/edit_text_field"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/signup_last_name" />


    <TextView
        android:id="@+id/signup_hint_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/signup_password"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_field"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/signup_email" />

    <Button
        android:id="@+id/signup_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_bg_primary_color"
        android:hint="@string/create_account"
        android:textColorHint="@color/white"
        android:textSize="@dimen/H2"
        app:layout_constraintTop_toBottomOf="@id/signup_password" />

    <TextView
        android:id="@+id/login_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_create_account" />


    <Button
        android:id="@+id/signup_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/button_bg_transparent"
        android:drawableStart="@drawable/google_ic"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/continue_with_google"
        app:layout_constraintTop_toBottomOf="@id/login_divider" />

    <TextView
        android:id="@+id/signup_already_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="16dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/signup_to_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_in"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/signup_already_user" />

</androidx.constraintlayout.widget.ConstraintLayout>